# ComfyUI-SkinTokens

./: bpy_server.py  demo.py  download_libs.py  nodes.py  pyproject.toml
src/model/: spec.py  tokenrig.py
src/rig_package/info/: asset.py  ue5_mapper.py
src/rig_package/parser/: bpy.py
src/server/: spec.py
test_scripts/: dump_manny_bones.py  manny_bones.txt  test_mapper.py  test_mapper_debug.py  test_mapper_debug_fingers.py  test_textures.py  test_ue5_mapper.py
web/js/: preview3d.js
workflows/: skinToken.json
